--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Install dependencies 
       run: npm install
     - name: Run unit tests     
-    - run: npm run test:unit
+      run: npm run test:unit
