--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,3 +26,5 @@ jobs:
       run: npm install
     - name: Run unit tests     
       run: npm run test:unit
+    - name: Display username    
+      run: echo "dkoeva"
