--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,6 +43,8 @@ jobs:
         cache: 'npm'
     - name: Install dependencies 
       run: npm install
-    - name: Run unit tests     
+    - name: Install Playwright 
+      run: npx playwright install
+    - name: Run ui tests     
       run: npm run test:ui
 
