--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,6 +45,8 @@ jobs:
       run: npm install
     - name: Install Playwright 
       run: npx playwright install
+    - name: Start the application
+      run: npm start &
     - name: Run ui tests     
       run: npm run test:ui
 
