--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,6 +32,7 @@ jobs:
   ui_tests:
 
     runs-on: ubuntu-latest
+    
     needs: build_and_test
     steps:
     - name: Checkuot the repository
@@ -49,4 +50,15 @@ jobs:
       run: npm start &
     - name: Run ui tests     
       run: npm run test:ui
+  
+  deploy:
+    
+    runs-on: ubuntu-latest
 
+    needs: ui_tests
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.MY_RENDER_SERVICE_ID }}
+          api-key: ${{ secrets.MY_RENDER_API_KEY }}
